Fixed x-overflow issues on nav open

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,10 @@ html {
 	@apply bg-zinc-100 text-zinc-950 text-balance text-base font-normal leading-tight overscroll-none;
 }
 
+body {
+	@apply overflow-x-hidden;
+}
+
 ::-moz-selection {
 	@apply bg-sky-300;
 	text-shadow: none;
